force-app/main/default/objects/Research_Paper_Contact__c/Research_Paper_Contact__c.object-meta.xml
<CustomObject>
    <description>Junction object between Research paper and Contact</description>
    <label>Research Paper Contact</label>
    <nameField>
        <displayFormat>RPContact-{0000}</displayFormat>
        <label>Research Paper Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Research Paper Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>