force-app/main/default/objects/Research_Paper_Contact__c/fields/Dead_Line_Date__c.field-meta.xml
<CustomField>
    <fullName>Dead_Line_Date__c</fullName>
    <label>Dead Line Date</label>
    <type>Date</type>
</CustomField>