force-app/main/default/objects/Research_Paper_Contact__c/fields/Research_Paper__c.field-meta.xml
<CustomField>
    <fullName>Research_Paper__c</fullName>
    <description>In master Detail relationship with Research Paper</description>
    <label>Research Paper</label>
    <referenceTo>Research_Paper__c</referenceTo>
    <relationshipLabel>Research Paper Contacts</relationshipLabel>
    <relationshipName>Research_Paper_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>