force-app/main/default/objects/Research_Paper_Contact__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <description>In Master Detail Relationship with Contact</description>
    <label>Reviewer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Research Paper Contacts</relationshipLabel>
    <relationshipName>Research_Paper_Contacts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>